--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tfs-cli",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "TFS Cross Platform Command Line",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/tfx-cli"
+    "url": "https://github.com/Microsoft/tfs-cli"
   },
   "main": "./tfx-cli.js",
   "preferGlobal": true,
