--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "q": "^1.4.1",
     "read": "^1.0.6",
     "shelljs": "^0.5.1",
-    "vso-node-api": "^0.2.1",
     "validator": "^3.33.0"
+    "vso-node-api": "^0.2.6"
   },
   "devDependencies": {
     "del": "^1.2.0",
