--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "q": "^1.4.1",
     "read": "^1.0.6",
     "shelljs": "^0.5.1",
-    "validator": "^3.33.0"
+    "validator": "^3.33.0",
     "vso-node-api": "^0.2.6"
   },
   "devDependencies": {
