starting tasks create

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "^1.4.0",
     "colors": "^1.1.2",
     "minimist": "^1.1.2",
+    "node-uuid": "^1.4.3",
     "os-homedir": "^1.0.1",
     "q": "^1.4.1",
     "read": "^1.0.6",
