some fixes to settings

--- a/settings.vset.json
+++ b/settings.vset.json
@@ -1,8 +1,8 @@
 {
-    "authtype": "pat",
+    "authtype": "foobar",
     "project": "Gentest",
     "definitionid": null,
     "definitionname": "println",
     "status": null,
-    "top": 5
+    "top": 10
 }
