--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,7 @@
 			// Use JavaScript source maps (if they exist).
 			"sourceMaps": true,
 			// If JavaScript source maps are enabled, the generated code is expected in this directory.
-			"outDir": "c:/tfs-cli/_build/app"
+			"outDir": "/tfs-cli/_build/app"
 		},
 		{
 			"name": "Attach",
