--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "gulp-mocha": "2.0.0",
     "gulp-tsb": "^1.10.2",
     "minimatch": "^2.0.8",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "typescript": "^1.8.9"
   },
   "author": "",
   "license": "MIT"
