--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "validator": "^3.43.0",
     "vso-node-api": "^3.0.0",
     "winreg": "0.0.12",
-    "xml2js": "0.4.9"
+    "xml2js": "^0.4.16"
   },
   "devDependencies": {
     "del": "^1.2.0",
