--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "colors": "^1.1.2",
     "copy-paste": "^1.1.3",
     "glob": "5.0.10",
-    "inquirer": "0.8.5",
     "jszip": "2.5.0",
     "lodash": "3.9.3",
     "minimist": "^1.1.2",
@@ -37,7 +36,7 @@
     "tmp": "0.0.26",
     "tracer": "0.7.4",
     "validator": "^3.43.0",
-    "vso-node-api": "^3.0.0",
+    "vso-node-api": "3.0.2",
     "winreg": "0.0.12",
     "xml2js": "^0.4.16"
   },
