--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "copy-paste": "^1.1.3",
     "glob": "5.0.10",
     "inquirer": "0.8.5",
+    "json-in-place": "^1.0.1",
     "jszip": "2.5.0",
     "lodash": "3.9.3",
     "minimist": "^1.1.2",
