--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tfx-cli",
-  "version": "0.3.26",
-  "description": "TFS Extensions Command Line Utility",
+  "version": "0.3.27",
+  "description": "CLI for Visual Studio Team Services and Team Foundation Server",
   "repository": {
     "type": "git",
     "url": "https://github.com/Microsoft/tfs-cli"
