Add work items doc and add better validation in work items commands

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,13 @@
 			// Type of configuration.
 			"type": "node",
 			// Workspace relative or absolute path to the program.
-			"program": "./app/tfx-cli.ts",
+			"program": "${workspaceRoot}/_build/app/tfx-cli.js",
 			// Automatically stop program after launch.
 			"stopOnEntry": true,
 			// Command line arguments passed to the program.
-			"args": [],
+			"args": ["workitem", "update", "--work-item-id", "11", "--values", "{\"title\":\"hello\"}"],
 			// Workspace relative or absolute path to the working directory of the program being debugged. Default is the current workspace.
-			"cwd": ".",
+			"cwd": "${workspaceRoot}",
 			// Workspace relative or absolute path to the runtime executable to be used. Default is the runtime executable on the PATH.
 			"runtimeExecutable": null,
 			// Optional arguments passed to the runtime executable.
@@ -26,7 +26,7 @@
 			// Use JavaScript source maps (if they exist).
 			"sourceMaps": true,
 			// If JavaScript source maps are enabled, the generated code is expected in this directory.
-			"outDir": "./_build/app"
+			"outDir": "${workspaceRoot}/_build/app"
 		},
 		{
 			"name": "Attach",
