--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,19 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es5",
+		"target": "es6",
+		"moduleResolution": "node",
 		"declaration": false,
 		"sourceMap": false,
-		"newLine": "LF"
-	}
+		"newLine": "LF",
+		"lib": ["es5", "es2015", "es6"],
+		"outDir": "_build"
+	},
+	"include": [
+		"app/app.ts",
+		"app/exec/**/*.ts",
+		"typings/**/*.d.ts"
+		/*,
+		"node_modules/@types/q/index.d.ts" // We augment the definitions with a file under typings, so we need an explicit reference here.*/
+	]
 }
