--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "scripts": {
     "clean": "rimraf _build",
     "prebuild": "npm run clean",
-    "build": "tsc -p . && ncp app/tfx-cli.js _build/tfx-cli.js && ncp package.json _build/package.json"
+    "build": "tsc -p .",
+    "postbuild": "npm run copy",
+    "copy": "ncp app/tfx-cli.js _build/tfx-cli.js && ncp package.json _build/package.json",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "@types/colors": "^0.6.31",
@@ -33,7 +36,7 @@
     "archiver": "0.14.4",
     "async": "^1.4.0",
     "colors": "^1.1.2",
-    "copy-paste": "^1.1.3",
+    "copy-paste": "^1.3.0",
     "glob": "5.0.10",
     "inquirer": "0.8.5",
     "json-in-place": "^1.0.1",
@@ -57,16 +60,12 @@
     "xml2js": "^0.4.16"
   },
   "devDependencies": {
-    "del": "^1.2.0",
-    "gulp": "^3.9.0",
-    "gulp-filter": "^3.0.1",
-    "gulp-mocha": "2.0.0",
-    "gulp-tsb": "^1.10.2",
     "minimatch": "^2.0.8",
     "mocha": "^2.2.5",
     "ncp": "^2.0.0",
     "rimraf": "^2.5.4",
-    "typescript": "^2.0.2"
+    "typescript": "^2.0.2",
+    "webpack": "^1.13.2"
   },
   "author": "",
   "license": "MIT"
