Add some things to the file extension map and fix missing resources in build.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "clean": "rimraf _build",
     "build": "tsc -p .",
-    "postbuild": "ncp app/tfx-cli.js _build/tfx-cli.js && ncp package.json _build/package.json",
+    "postbuild": "ncp app/tfx-cli.js _build/tfx-cli.js && ncp package.json _build/package.json && ncp app/exec/build/tasks/_resources _build/exec/build/tasks/_resources",
     "prepublish": "npm run build"
   },
   "dependencies": {
