download build logs as zip

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     },
 	"editor.insertSpaces": false,
 	"typescript.tsdk": "./node_modules/typescript/lib",
-	"vsicons.presets.angular": false
+	"vsicons.presets.angular": false,
+	"editor.formatOnPaste": true,
+	"editor.minimap.enabled": true,
+	"editor.snippetSuggestions": "top"
 }
