--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "tracer": "0.7.4",
     "uuid": "^3.0.1",
     "validator": "^3.43.0",
-    "vso-node-api": "^5.0.0",
+    "vso-node-api": "^6.1.2-preview",
     "winreg": "0.0.12",
     "xml2js": "^0.4.16"
   },
