--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@types/xml2js": "0.0.27",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.1",
-    "typescript": "^2.2.1",
+    "typescript": "2.2.2",
     "webpack": "^1.13.2"
   },
   "author": "",
