--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "dependencies": {
     "app-root-path": "1.0.0",
-    "archiver": "0.14.4",
+    "archiver": "2.0.3",
     "async": "^1.4.0",
     "colors": "^1.1.2",
     "copy-paste": "^1.3.0",
-    "glob": "5.0.10",
+    "glob": "7.1.2",
     "inquirer": "0.8.5",
     "json-in-place": "^1.0.1",
     "jszip": "2.5.0",
@@ -35,7 +35,6 @@
     "prompt": "^0.2.14",
     "q": "^1.4.1",
     "read": "^1.0.6",
-    "request": "2.58.0",
     "shelljs": "^0.5.1",
     "tmp": "0.0.26",
     "tracer": "0.7.4",
@@ -60,7 +59,7 @@
     "@types/xml2js": "0.0.27",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.1",
-    "typescript": "^2.2.1",
+    "typescript": "~2.2.1",
     "webpack": "^1.13.2"
   },
   "author": "",
