--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "copy-paste": "^1.3.0",
     "glob": "7.1.2",
     "inquirer": "0.8.5",
-    "json-in-place": "^1.0.1",
+    "jju": "^1.3.0",
     "jszip": "2.5.0",
     "lodash": "^4.15.0",
     "minimist": "^1.1.2",
