--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
 		"declaration": false,
 		"sourceMap": true,
 		"newLine": "LF",
-		"lib": ["es5", "es2015", "es6"],
+
+		// Note: dom is specified below so that the JSZip d.ts can use the Blob type.
+		"lib": ["es5", "es2015", "es6", "dom"],
 		"outDir": "_build"
 	},
 	"include": [
