--- a/package.json
+++ b/package.json
@@ -1,69 +1,4 @@
 {
-  "name": "tfx-cli",
-  "version": "0.5.2",
-  "description": "CLI for Visual Studio Team Services and Team Foundation Server",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Microsoft/tfs-cli"
-  },
-  "main": "./_build/tfx-cli.js",
-  "preferGlobal": true,
-  "bin": {
-    "tfx": "./_build/tfx-cli.js"
-  },
-  "scripts": {
-    "clean": "rimraf _build",
-    "build": "tsc -p .",
-    "postbuild": "ncp app/tfx-cli.js _build/tfx-cli.js && ncp package.json _build/package.json && ncp app/exec/build/tasks/_resources _build/exec/build/tasks/_resources",
-    "prepublish": "npm run build"
-  },
-  "dependencies": {
-    "app-root-path": "1.0.0",
-    "archiver": "2.0.3",
-    "async": "^1.4.0",
-    "colors": "^1.1.2",
-    "copy-paste": "^1.3.0",
-    "glob": "7.1.2",
-    "inquirer": "0.8.5",
-    "json-in-place": "^1.0.1",
-    "jszip": "2.5.0",
-    "lodash": "^4.15.0",
-    "minimist": "^1.1.2",
-    "mkdirp": "^0.5.1",
-    "onecolor": "^2.5.0",
-    "os-homedir": "^1.0.1",
-    "prompt": "^0.2.14",
-    "q": "^1.4.1",
-    "read": "^1.0.6",
-    "shelljs": "^0.5.1",
-    "tmp": "0.0.26",
-    "tracer": "0.7.4",
-    "uuid": "^3.0.1",
-    "validator": "^3.43.0",
-    "vso-node-api": "^5.1.2",
-    "winreg": "0.0.12",
-    "xml2js": "^0.4.16"
-  },
-  "devDependencies": {
-    "@types/colors": "^0.6.31",
-    "@types/copy-paste": "^1.1.29",
-    "@types/glob": "^5.0.29",
-    "@types/jszip": "0.0.30",
-    "@types/lodash": "^4.14.69",
-    "@types/mkdirp": "^0.3.28",
-    "@types/node": "^6.0.38",
-    "@types/shelljs": "^0.3.30",
-    "@types/uuid": "^2.0.29",
-    "@types/validator": "^4.5.27",
-    "@types/winreg": "^1.2.29",
-    "@types/xml2js": "0.0.27",
-    "ncp": "^2.0.0",
-    "rimraf": "^2.6.1",
-    "typescript": "2.2.2",
-    "webpack": "^1.13.2"
-  },
-  "author": "",
-  "license": "MIT",
     "name": "tfx-cli",
     "version": "0.5.2",
     "description": "CLI for Visual Studio Team Services and Team Foundation Server",
@@ -91,7 +26,7 @@
         "glob": "7.1.2",
         "inquirer": "0.8.5",
         "json-in-place": "^1.0.1",
-        "jszip": "~3.1.5",
+        "jszip": "^3.1.5",
         "lodash": "^4.15.0",
         "minimist": "^1.1.2",
         "mkdirp": "^0.5.1",
@@ -100,6 +35,7 @@
         "prompt": "^0.2.14",
         "read": "^1.0.6",
         "shelljs": "^0.5.1",
+        "tabtab": "^2.2.2",
         "tmp": "0.0.26",
         "tracer": "0.7.4",
         "uuid": "^3.0.1",
@@ -126,10 +62,11 @@
         "typescript": "~2.6.2",
         "webpack": "^1.13.2"
     },
+    "author": "Microsoft Corporation",
+    "license": "MIT",
     "engines": {
         "npm": ">=8.0.0"
     },
-    "author": "Microsoft Corporation",
     "contributors": [
         {
             "email": "trgau@microsoft.com",
@@ -139,6 +76,5 @@
             "email": "shfeldma@microsoft.com",
             "name": "Shani Feldman"
         }
-    ],
-    "license": "MIT"
+    ]
 }
