--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"declaration": false,
 		"sourceMap": true,
 		"newLine": "LF",
+		"noFallthroughCasesInSwitch": true,
 
 		// Note: dom is specified below so that the JSZip d.ts can use the Blob type.
 		"lib": ["es5", "es2015", "es6", "dom"],
