--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
         "app-root-path": "1.0.0",
         "archiver": "2.0.3",
         "async": "^1.4.0",
-        "colors": "^1.1.2",
+        "colors": "~1.3.0",
         "copy-paste": "^1.3.0",
         "glob": "7.1.2",
         "inquirer": "0.8.5",
         "json-in-place": "^1.0.1",
         "jszip": "~3.1.5",
-        "lodash": "^4.15.0",
+        "lodash": "~4.17.0",
         "minimist": "^1.1.2",
         "mkdirp": "^0.5.1",
         "onecolor": "^2.5.0",
@@ -45,11 +45,10 @@
         "xml2js": "^0.4.16"
     },
     "devDependencies": {
-        "@types/colors": "^0.6.31",
         "@types/copy-paste": "^1.1.29",
         "@types/glob": "^5.0.29",
         "@types/jszip": "~3.1.2",
-        "@types/lodash": "^4.14.53",
+        "@types/lodash": "~4.14.110",
         "@types/mkdirp": "^0.3.28",
         "@types/node": "~8.5.1",
         "@types/shelljs": "^0.3.30",
