--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "app-root-path": "1.0.0",
     "archiver": "2.0.3",
     "async": "^1.4.0",
+    "clipboardy": "~1.2.3",
     "colors": "~1.3.0",
-    "copy-paste": "^1.3.0",
     "glob": "7.1.2",
-    "inquirer": "0.8.5",
     "json-in-place": "^1.0.1",
     "jszip": "~3.1.5",
     "lodash": "~4.17.0",
@@ -45,7 +44,7 @@
     "xml2js": "^0.4.16"
   },
   "devDependencies": {
-    "@types/copy-paste": "^1.1.29",
+    "@types/clipboardy": "~1.1.0",
     "@types/glob": "^5.0.29",
     "@types/jszip": "~3.1.2",
     "@types/lodash": "~4.14.110",
