--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/xml2js": "0.0.27",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.1",
-    "typescript": "~2.6.2",
+    "typescript": "^3.2.2",
     "webpack": "^1.13.2"
   },
   "engines": {
