--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "util.promisify": "^1.0.0",
     "uuid": "^3.0.1",
     "validator": "^3.43.0",
-    "vso-node-api": "^5.0.0",
+    "azure-devops-node-api": "^7.2.0",
     "winreg": "0.0.12",
     "xml2js": "^0.4.16"
   },
