--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "uuid": "^3.0.1",
     "validator": "^3.43.0",
     "winreg": "0.0.12",
-    "xml2js": "^0.4.16"
+    "xml2js": "^0.4.16",
+    "zip-folder": "1.0.0"
   },
   "devDependencies": {
     "@types/clipboardy": "~1.1.0",
