--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "azure-devops-node-api": "^8.1.1",
     "clipboardy": "~1.2.3",
     "colors": "~1.3.0",
+    "extract-zip": "1.6.7",
     "glob": "7.1.2",
     "jju": "^1.4.0",
     "json-in-place": "^1.0.1",
