--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "validator": "^3.43.0",
     "winreg": "0.0.12",
     "xml2js": "^0.4.16",
+    "zip-dir": "1.0.2",
     "zip-folder": "1.0.0"
   },
   "devDependencies": {
