--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "azure-devops-node-api": "^8.1.1",
     "clipboardy": "~1.2.3",
     "colors": "~1.3.0",
+    "del": "5.1.0",
     "extract-zip": "1.6.7",
     "glob": "7.1.2",
     "jju": "^1.4.0",
@@ -33,6 +34,7 @@
     "lodash": "~4.17.11",
     "minimist": "^1.1.2",
     "mkdirp": "^0.5.1",
+    "ncp": "2.0.0",
     "onecolor": "^2.5.0",
     "os-homedir": "^1.0.1",
     "prompt": "^0.2.14",
@@ -51,11 +53,13 @@
   },
   "devDependencies": {
     "@types/clipboardy": "~1.1.0",
+    "@types/del": "4.0.0",
     "@types/glob": "^5.0.29",
     "@types/jju": "^1.4.1",
     "@types/jszip": "~3.1.2",
     "@types/lodash": "~4.14.110",
     "@types/mkdirp": "^0.3.28",
+    "@types/ncp": "2.0.2",
     "@types/node": "~8.5.1",
     "@types/shelljs": "^0.3.30",
     "@types/uuid": "^2.0.29",
