--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "clipboardy": "~1.2.3",
     "colors": "~1.3.0",
     "del": "5.1.0",
-    "extract-zip": "1.6.7",
     "glob": "7.1.2",
     "jju": "^1.4.0",
     "json-in-place": "^1.0.1",
@@ -46,9 +45,7 @@
     "uuid": "^3.0.1",
     "validator": "^3.43.0",
     "winreg": "0.0.12",
-    "xml2js": "^0.4.16",
-    "zip-dir": "1.0.2",
-    "zip-folder": "1.0.0"
+    "xml2js": "^0.4.16"
   },
   "devDependencies": {
     "@types/clipboardy": "~1.1.0",
