--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "azure-devops-node-api": "^8.1.1",
     "clipboardy": "~1.2.3",
     "colors": "~1.3.0",
-    "del": "5.1.0",
     "glob": "7.1.2",
     "jju": "^1.4.0",
     "json-in-place": "^1.0.1",
@@ -38,7 +37,7 @@
     "os-homedir": "^1.0.1",
     "prompt": "^0.2.14",
     "read": "^1.0.6",
-    "shelljs": "^0.5.1",
+    "shelljs": "0.8.3",
     "tmp": "0.0.26",
     "tracer": "0.7.4",
     "util.promisify": "^1.0.0",
@@ -49,7 +48,6 @@
   },
   "devDependencies": {
     "@types/clipboardy": "~1.1.0",
-    "@types/del": "4.0.0",
     "@types/glob": "^5.0.29",
     "@types/jju": "^1.4.1",
     "@types/jszip": "~3.1.2",
