--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "jju": "^1.4.0",
     "json-in-place": "^1.0.1",
     "jszip": "~3.1.5",
-    "lodash": "~4.17.11",
-    "minimist": "^1.1.2",
+    "lodash": "^4.17.21",
+    "minimist": "^1.2.5",
     "mkdirp": "^0.5.1",
     "onecolor": "^2.5.0",
     "os-homedir": "^1.0.1",
