--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfx-cli",
-  "version": "0.9.3",
+  "version": "0.10.0",
   "description": "CLI for Azure DevOps Services and Team Foundation Server",
   "repository": {
     "type": "git",
@@ -21,19 +21,19 @@
     "app-root-path": "1.0.0",
     "archiver": "2.0.3",
     "async": "^1.4.0",
-    "azure-devops-node-api": "^8.1.1",
+    "azure-devops-node-api": "^10.2.2",
     "clipboardy": "~1.2.3",
     "colors": "~1.3.0",
     "glob": "7.1.2",
     "jju": "^1.4.0",
     "json-in-place": "^1.0.1",
-    "jszip": "~3.1.5",
-    "lodash": "~4.17.11",
-    "minimist": "^1.1.2",
+    "jszip": "^3.7.1",
+    "lodash": "^4.17.21",
+    "minimist": "^1.2.5",
     "mkdirp": "^0.5.1",
     "onecolor": "^2.5.0",
     "os-homedir": "^1.0.1",
-    "prompt": "^0.2.14",
+    "prompt": "^1.2.0",
     "read": "^1.0.6",
     "shelljs": "^0.5.1",
     "tmp": "0.0.26",
