--- a/.ado/azure-pipeline.yml
+++ b/.ado/azure-pipeline.yml
@@ -1,6 +1,9 @@
 trigger:
 - master
 
+pool:
+  vmImage: windows-latest
+
 variables:
 - group: npm-tokens
 
@@ -16,17 +19,19 @@ steps:
 - script: npm i -g npm@6.14.12 --force
   displayName: Use npm version 6.14.12
 
-- script: npm install
+- script: npm ci
   displayName: Install npm-dependencies
 
 - script: npm run build
   displayName: Build TFX CLI
 
-- script: |
-    cd _build
-    echo //registry.npmjs.org/:_authToken=\$(NPM_TOKEN) > .npmrc
-    npm run publish
-  condition: and(succeeded(), in(variables['build.reason'], 'IndividualCI', 'BatchedCI', 'Manual'), eq(variables['Agent.OS'], 'Windows_NT'))
+- powershell: |
+    "//registry.npmjs.org/:_authToken=$env:NPM_TOKEN" | Out-File ".npmrc"
+    & npm publish --ignore-scripts _build
+    if ($LASTEXITCODE -eq 1) {
+      Write-Host "##vso[task.logissue type=warning]Publishing TFX CLI was unsuccessful"
+      exit 0
+    }
   env:
     NPM_TOKEN: $(npm-automation.token)
   displayName: Publish TFX CLI
