1ES Pipelines Template Adoption
- Skib baseline for now

--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -19,16 +19,14 @@ extends:
       skipBuildTagsForGitHubPullRequests: true
     # featureFlags:
       # autoBaseline: false
-    sdl:
-      baseline:
-        baselineSet: default
-        baselineFile: $(Build.SourcesDirectory)/.gdn/.gdnbaselines
+    # sdl:
+    #   baseline:
+    #     baselineSet: default
+    #     baselineFile: $(Build.SourcesDirectory)/.gdn/.gdnbaselines
     pool:
       name: 1ES-ABTT-Shared-Pool
       image: abtt-windows-2022
       os: windows
-    customBuildTags:
-    - ES365AIMigrationTooling
     stages:
     - stage: stage
       jobs:
