--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -4,8 +4,8 @@
 trigger:
 - master
 - releases/*
-variables:
-- group: npm-tokens
+#variables:
+#- group: npm-tokens
 resources:
   repositories:
   - repository: 1ESPipelineTemplates
@@ -60,7 +60,7 @@ extends:
           # For CI and Manual runs automatically publish packages
           # The npm cli will replace ${NPM_TOKEN} with the contents of the NPM_TOKEN environment variable.
           - bash: |
-              echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > .npmrc
+              echo '//msazure.pkgs.visualstudio.com/_packaging/tfs-cli/npm/:_authToken=${NPM_TOKEN}' > .npmrc
 
               npm publish --ignore-scripts
               exit_status=$?
