--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -23,10 +23,15 @@ extends:
     #   baseline:
     #     baselineSet: default
     #     baselineFile: $(Build.SourcesDirectory)/.gdn/.gdnbaselines
+    sdl:
+      sourceAnalysisPool:
+        name: Azure-Pipelines-1ESPT-ExDShared
+        image: windows-2022
+        os: windows
     pool:
-      name: 1ES-ABTT-Shared-Pool
-      image: abtt-windows-2022
-      os: windows
+      name: Azure-Pipelines-1ESPT-ExDShared
+      image: ubuntu-latest
+      os: linux
     stages:
     - stage: stage
       jobs:
