--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -30,8 +30,8 @@ extends:
         os: windows
     pool:
       name: Azure-Pipelines-1ESPT-ExDShared
-      image: ubuntu-latest
-      os: linux
+      image: windows-2022
+      os: windows
     stages:
     - stage: stage
       jobs:
