add local .npmrc and remove auth token usage

--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -68,7 +68,7 @@ extends:
           # For CI and Manual runs automatically publish packages
           # The npm cli will replace ${NPM_TOKEN} with the contents of the NPM_TOKEN environment variable.
           - bash: |
-              echo '//msazure.pkgs.visualstudio.com/_packaging/tfs-cli/npm/:_authToken=${NPM_TOKEN}' > .npmrc
+              ##echo '//msazure.pkgs.visualstudio.com/_packaging/tfs-cli/npm/:_authToken=${NPM_TOKEN}' > .npmrc
 
               npm publish --ignore-scripts
               exit_status=$?
