--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-registry=https://msazure.pkgs.visualstudio.com/_packaging/tfs-cli/npm/registry/
-always-auth=true
+registry=https://registry.npmjs.org/
+@{scope}:registry=https://msazure.pkgs.visualstudio.com/_packaging/tfs-cli/npm/registry/
+@{scope}:always-auth=true
