--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -60,6 +60,7 @@ extends:
           displayName: Use typescript (tsc) version 5.1.3
         
         - bash: |
+            npm config set registry https://msazure.pkgs.visualstudio.com/_packaging/tfs-cli/npm/registry/
             npm ci
             npm run build
           displayName: Build TFX CLI
