--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -25,11 +25,11 @@ extends:
     #     baselineFile: $(Build.SourcesDirectory)/.gdn/.gdnbaselines
     sdl:
       sourceAnalysisPool:
-        name: Hosted
+        name: Azure-Pipelines-1ESPT-ExDShared
         image: windows-2022
         os: windows
     pool:
-      name: Hosted
+      name: Azure-Pipelines-1ESPT-ExDShared
       image: windows-2022
       os: windows
     stages:
