--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -78,6 +78,11 @@ extends:
             publishFeed: tfs-cli
           continueOnError: true
         
+        - bash: |
+            npm pack
+            cp *.tgz '$(Build.ArtifactStagingDirectory)'
+          displayName: Run npm-pack and copy to ArtifactStagingDirectory
+
         # Install node 16 for CodeQL 3000
         - task: NodeTool@0
           displayName: Use node 16
