--- a/.azure-pipelines/azure-pipeline.yml
+++ b/.azure-pipelines/azure-pipeline.yml
@@ -48,6 +48,10 @@ extends:
           inputs:
             versionSpec: "10.x"
 
+        - task: NpmAuthenticate@0
+          inputs:
+            workingFile: .npmrc
+
         - script: npm i -g npm@6.14.12 --force
           displayName: Use npm version 6.14.12
 
