--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@types/jszip": "~3.1.2",
     "@types/lodash": "~4.14.110",
     "@types/mkdirp": "^1.0.2",
-    "@types/node": "~8.5.1",
+    "@types/node": "8.10.66",
     "@types/shelljs": "^0.8.11",
     "@types/uuid": "^2.0.29",
     "@types/validator": "^4.5.27",
