--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfx-cli",
-  "version": "0.17.0",
+  "version": "0.18.0",
   "description": "CLI for Azure DevOps Services and Team Foundation Server",
   "repository": {
     "type": "git",
@@ -18,50 +18,39 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "app-root-path": "1.0.0",
-    "archiver": "2.0.3",
+    "archiver": "7.0.1",
     "azure-devops-node-api": "^10.2.2",
     "clipboardy": "~1.2.3",
     "colors": "~1.3.0",
-    "glob": "7.1.2",
+    "glob": "^10.4.5",
     "jju": "^1.4.0",
     "json-in-place": "^1.0.1",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
-    "minimist": "^1.2.6",
-    "mkdirp": "^1.0.4",
-    "onecolor": "^2.5.0",
-    "os-homedir": "^1.0.1",
+    "mkdirp": "^3.0.1",
+    "onecolor": "^4.0.1",
     "prompt": "^1.3.0",
-    "read": "^1.0.6",
     "shelljs": "^0.8.5",
-    "tmp": "0.0.26",
-    "tracer": "0.7.4",
-    "util.promisify": "^1.0.0",
-    "uuid": "^3.0.1",
+    "uuid": "^10.0.0",
     "validator": "^13.7.0",
-    "winreg": "0.0.12",
+    "winreg": "^1.2.5",
     "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "@types/clipboardy": "~1.1.0",
-    "@types/glob": "^5.0.29",
     "@types/jju": "^1.4.1",
     "@types/jszip": "~3.1.2",
-    "@types/lodash": "~4.14.110",
-    "@types/mkdirp": "^1.0.2",
-    "@types/node": "~8.5.1",
-    "@types/shelljs": "^0.8.11",
-    "@types/uuid": "^2.0.29",
+    "@types/lodash": "4.14.116",
     "@types/validator": "^4.5.27",
     "@types/winreg": "^1.2.29",
     "@types/xml2js": "0.0.27",
+    "@types/node": "^16.7.13",
     "ncp": "^2.0.0",
-    "rimraf": "^2.6.1",
-    "typescript": "^3.2.2"
+    "rimraf": "^5.0.10",
+    "typescript": "^4.0.2"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=14.17"
   },
   "author": "Microsoft Corporation",
   "contributors": [
