--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es5",
+		"target": "ES2020",
 		"moduleResolution": "node",
 		"declaration": false,
 		"sourceMap": true,
@@ -9,7 +9,7 @@
 		"noFallthroughCasesInSwitch": true,
 
 		// Note: dom is specified below so that the JSZip d.ts can use the Blob type.
-		"lib": ["es5", "es2015", "es6", "dom"],
+		"lib": ["ES2020", "dom"],
 		"outDir": "_build"
 	},
 	"include": [
