--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "app-root-path": "1.0.0",
     "archiver": "2.0.3",
     "azure-devops-node-api": "^10.2.2",
-    "clipboardy": "^1.2.3",
+    "clipboardy": "~1.2.3",
     "colors": "~1.3.0",
     "glob": "7.1.2",
     "jju": "^1.4.0",
