--- a/.azure-pipelines/release-pipeline.yml
+++ b/.azure-pipelines/release-pipeline.yml
@@ -40,6 +40,19 @@ extends:
         displayName: upload the package to npm
         steps:
         - ${{ if in(variables['build.reason'], 'IndividualCI', 'BatchedCI', 'Manual') }}:
+          # Adding Manual step as right now we do not have automated tests. 
+          - task: ManualValidation@0
+            inputs:
+              notifyUsers: |
+                   $(notifyUsers)
+              instructions: 'Please validate and test the generated package.'
+          - task: NodeTool@0
+            displayName: Use node 10
+            inputs:
+              versionSpec: "10.x"
+          - task: NpmAuthenticate@0
+            inputs:
+              workingFile: .npmrc
           # Validate and publish packages
           # The npm cli will replace ${NPM_TOKEN} with the contents of the NPM_TOKEN environment variable.
           - bash: |
